[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/mainMenu/splash.bmp" type="Texture" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://texts/generalFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/mainMenu/btn_main_menu.png" type="Texture" id=4]

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.22774
margin_right = 254.772
margin_bottom = 144.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.00086565
anchor_right = 0.00086565
margin_left = 98.892
margin_top = 500.0
margin_right = 548.892
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menuContainer"]
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 450, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGameButton" type="Button" parent="menuContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 450, 50 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="menuContainer/VBoxContainer/newGameButton"]
margin_right = 40.0
margin_bottom = 4.0
rect_min_size = Vector2( 45, 5 )
rect_scale = Vector2( 10, 10 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="menuContainer/VBoxContainer/newGameButton"]
margin_right = 450.0
margin_bottom = 45.0
rect_min_size = Vector2( 450, 45 )
custom_fonts/font = ExtResource( 3 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menuContainer/VBoxContainer/newGameButton" to="." method="_on_newGameButton_pressed"]
